--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>MusicPlus</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-grey-800">
+<body class="bg-grey-800" bgcolor="black">
 <div class="mx-auto w-6/12">
     <div class="text-center m-20 py-3 px-2">
         <h1 class="text-6xl font-extrapolated text-white">MusicPlus</h1>
@@ -45,7 +45,7 @@
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                                 <audio controls>
-                                    <source src="">
+                                    <source src="https://musicplus.s3.amazonaws.com/DJ-Tunez-ft.-Wizkid-Blaqjerzee-%E2%80%93-Gbese.mp3" type="audio/mpeg">
                                     Your browser does not support this audio element
                                 </audio>
 
